# Nivvi-landing-page

./: .gitignore  README.md  main.py  netlify.toml  package.json  pyproject.toml
docs/: landing_deploy.md
netlify/functions/: admin-leads-csv.mjs  admin-leads.mjs  analytics.mjs  health.mjs  waitlist.mjs
netlify/functions/_shared/: waitlist.mjs
nivvi/: __init__.py  main.py  marketing_main.py
tests/: test_landing_waitlist.py  test_marketing_split.py
web/: index.html  landing.css  landing.html  landing.js  legal.css  privacy.html  sitemap.xml  terms.html  waitlist-success.html  waitlist.html
web/fonts/: fonts.css
web/fonts/requiem/: 1001fonts-requiem-eula.txt  README.md
