[project]
name = "nivvi-marketing"
version = "1.0.0"
description = "Nivvi landing + waitlist backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.31.0",
  "pydantic>=2.9.0",
  "psycopg[binary]>=3.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
